--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@trpc/client": "^11.0.0-rc.682",
     "@trpc/react-query": "^11.0.0-rc.682",
     "@trpc/server": "^11.0.0-rc.682",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
@@ -57,6 +58,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.17.11",
     "@types/react": "^18.3.18",
