--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shms-agricultural",
-  "description": "شمــس | منصة الخدمات الزراعية للمستثمرين والمزارعين السودانيين",
+  "description": "Shms | Agricultural Services Platform for Sudanese Investors and Farmers",
   "version": "1.0.0",
   "private": true,
   "author": {
@@ -32,7 +32,9 @@
     "@aws-sdk/client-s3": "^3.722.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.14",
@@ -67,8 +69,10 @@
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^8.57.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
