--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^12.4.1",
     "geist": "^1.3.1",
     "libphonenumber-js": "^1.11.19",
