--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
+    "puppeteer-core": "^24.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
