--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "geist": "^1.3.1",
     "libphonenumber-js": "^1.11.19",
     "lucide-react": "^0.474.0",
+    "markdown-it": "^14.1.0",
     "next": "^15.1.7",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -90,6 +91,7 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.12",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.17.18",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
