--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -95,6 +96,7 @@
     "@types/node": "^20.17.18",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^8.57.1",
