--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@aws-sdk/client-s3": "^3.744.0",
-    "@aws-sdk/s3-request-presigner": "^3.744.0",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.750.0",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -54,20 +54,20 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.33",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-table": "^8.21.2",
-    "@trpc/client": "^11.0.0-rc.768",
-    "@trpc/react-query": "^11.0.0-rc.768",
-    "@trpc/server": "^11.0.0-rc.768",
+    "@trpc/client": "^11.0.0-rc.795",
+    "@trpc/react-query": "^11.0.0-rc.795",
+    "@trpc/server": "^11.0.0-rc.795",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
-    "framer-motion": "^12.4.2",
+    "framer-motion": "^12.4.5",
     "geist": "^1.3.1",
-    "libphonenumber-js": "^1.11.19",
+    "libphonenumber-js": "^1.11.20",
     "lucide-react": "^0.474.0",
-    "markdown-it": "^14.1.0",
+    "marked": "^15.0.7",
     "next": "^15.1.7",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -77,7 +77,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
-    "react-phone-number-input": "^3.4.11",
+    "react-phone-number-input": "^3.4.12",
     "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
@@ -89,23 +89,23 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/postcss": "^4.0.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.12",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^20.17.18",
+    "@types/node": "^20.17.19",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/turndown": "^5.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.1.7",
-    "postcss": "^8.5.2",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.3.1",
-    "tailwindcss": "^4.0.6",
+    "prisma": "^6.4.0",
+    "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
