--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@aws-sdk/client-s3": "^3.750.0",
     "@aws-sdk/s3-request-presigner": "^3.750.0",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.4.0",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -68,6 +68,7 @@
     "libphonenumber-js": "^1.11.20",
     "lucide-react": "^0.474.0",
     "marked": "^15.0.7",
+    "mongodb": "^6.13.1",
     "next": "^15.1.7",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -104,7 +105,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.4.0",
+    "prisma": "^6.4.1",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
   },
