--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.12",
+    "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
