--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbo --experimental-https",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "check": "next lint && tsc --noEmit",
     "db:generate": "bunx prisma generate",
@@ -53,6 +53,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.33",
+    "@sentry/nextjs": "^9",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-table": "^8.21.2",
